--- a/Javier/smoke-status-bio-signal/machine-learning/machine-learning.ipynb
+++ b/Javier/smoke-status-bio-signal/machine-learning/machine-learning.ipynb
@@ -512,12 +512,10 @@
     "from sklearn.linear_model import SGDClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
-    "# Define the pipeline\n",
     "pipeline = Pipeline([\n",
-    "    ('classifier', RandomForestClassifier())  # Placeholder Estimator\n",
+    "    ('classifier', RandomForestClassifier())\n",
     "])\n",
     "\n",
-    "# Define the parameters grid for each classifier\n",
     "parameters = [\n",
     "    {\n",
     "        'classifier': [GradientBoostingClassifier()],\n",
@@ -529,21 +527,16 @@
     "    },\n",
     "]\n",
     "\n",
-    "# GridSearchCV to find the best model\n",
     "grid_search = GridSearchCV(pipeline, parameters, n_jobs=-1, verbose=1, scoring='accuracy', cv=5)\n",
     "grid_search.fit(X_train, y_train)\n",
     "\n",
-    "# Print the best parameters\n",
     "print(\"Best parameters found: \", grid_search.best_params_)\n",
     "print()\n",
     "\n",
-    "# Select the best model\n",
     "best_model = grid_search.best_estimator_\n",
     "\n",
-    "# Make predictions\n",
     "y_pred = best_model.predict(X_test)\n",
     "\n",
-    "# Calculate accuracy\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print(\"Accuracy: {:.2f}%\".format(accuracy * 100))"
    ]
